# Deribit-trader-system-in-cpp

./: CMakeLists.txt  DETAILED_README 2.md  LICENSE  README.md  USAGE.md
include/: api_client.h  market_data.h  order_manager.h  websocket_server.h
src/: api_client.cpp  benchmark.cpp  main.cpp  market_data.cpp  order_manager.cpp  websocket_server.cpp
tests/: api_client_test.cpp  order_manager_test.cpp  test_main.cpp
